[gd_scene load_steps=20 format=2]

[ext_resource path="res://StartMenu.gd" type="Script" id=1]
[ext_resource path="res://logo/0001.png" type="Texture" id=2]
[ext_resource path="res://logo/0002.png" type="Texture" id=3]
[ext_resource path="res://logo/0003.png" type="Texture" id=4]
[ext_resource path="res://logo/0004.png" type="Texture" id=5]
[ext_resource path="res://logo/0005.png" type="Texture" id=6]
[ext_resource path="res://logo/0006.png" type="Texture" id=7]
[ext_resource path="res://Background/background.png" type="Texture" id=8]
[ext_resource path="res://logo/frame-1.png" type="Texture" id=9]
[ext_resource path="res://logo/frame-2.png" type="Texture" id=10]
[ext_resource path="res://stardate_81316.ttf" type="DynamicFontData" id=11]
[ext_resource path="res://logo/lineDark11.png" type="Texture" id=12]
[ext_resource path="res://logo/lineDark30.png" type="Texture" id=13]
[ext_resource path="res://logo/lineDark45.png" type="Texture" id=14]
[ext_resource path="res://cat.ogg" type="AudioStream" id=15]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 9 ), ExtResource( 10 ) ],
"loop": true,
"name": "default",
"speed": 3.0
} ]

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=4]
size = 40
font_data = ExtResource( 11 )

[node name="StartMenu" type="Node2D"]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 539.732, 202.18 )
frames = SubResource( 1 )
frame = 1
playing = true
__meta__ = {
"_edit_lock_": true
}

[node name="background" type="Sprite" parent="AnimatedSprite"]
position = Vector2( -23.1913, 79.7241 )
scale = Vector2( 0.613192, 0.610715 )
z_index = -1
texture = ExtResource( 8 )
__meta__ = {
"_edit_lock_": true
}

[node name="AnimatedSprite2" type="AnimatedSprite" parent="."]
position = Vector2( 299.322, 121.55 )
scale = Vector2( 0.202386, 0.241796 )
frames = SubResource( 2 )
frame = 1
playing = true
__meta__ = {
"_edit_lock_": true
}

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_lock_": true
}

[node name="CanvasLayer" type="CanvasLayer" parent="Control"]

[node name="Label" type="Label" parent="Control/CanvasLayer"]
margin_left = 804.443
margin_top = 4.76001
margin_right = 959.443
margin_bottom = 44.76
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.847059, 0.027451, 0.0823529, 1 )
text = "HIGH SCORE -"
__meta__ = {
"_edit_lock_": true
}

[node name="Label2" type="Label" parent="Control/CanvasLayer"]
margin_left = 973.0
margin_top = 4.0
margin_right = 1019.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.827451, 0.00784314, 0.00784314, 1 )
text = "0"

[node name="lineDark11" type="Sprite" parent="."]
modulate = Color( 0.25098, 0.235294, 0.235294, 1 )
position = Vector2( 534.65, 328.225 )
scale = Vector2( 2.425, 1.73229 )
texture = ExtResource( 12 )
__meta__ = {
"_edit_lock_": true
}

[node name="Button" type="Button" parent="lineDark11"]
modulate = Color( 1, 1, 1, 0.0980392 )
margin_left = -20.0
margin_top = -21.0
margin_right = 21.0
margin_bottom = 20.0
__meta__ = {
"_edit_lock_": true
}

[node name="lineDark30" type="Sprite" parent="."]
modulate = Color( 0.305882, 0.243137, 0.243137, 1 )
position = Vector2( 533.947, 411.537 )
texture = ExtResource( 13 )
__meta__ = {
"_edit_lock_": true
}

[node name="buttonexit" type="Button" parent="lineDark30"]
modulate = Color( 1, 1, 1, 0.156863 )
margin_left = -18.0
margin_top = -20.0
margin_right = 19.0
margin_bottom = 20.0
__meta__ = {
"_edit_lock_": true
}

[node name="lineDark45" type="Sprite" parent="."]
position = Vector2( 47.5207, 41.4543 )
texture = ExtResource( 14 )

[node name="about" type="Button" parent="lineDark45"]
modulate = Color( 1, 1, 1, 0.160784 )
margin_left = -27.0
margin_top = -32.0
margin_right = 26.0
margin_bottom = 29.0

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 15 )
autoplay = true
[connection signal="pressed" from="lineDark11/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="lineDark30/buttonexit" to="." method="_on_buttonexit_pressed"]
[connection signal="pressed" from="lineDark45/about" to="." method="_on_about_pressed"]
